--- a/public/css/base/variables.css
+++ b/public/css/base/variables.css
@@ -187,7 +187,7 @@
     --font-size-ui: 0.94em;
     --font-size-ui-rem: 0.95rem;
     /* A touch lower */
-    --font-size-ui-line-height: 1.575;
+    --font-size-ui-line-height: 1.5;
 
     --font-size-reading-line-height: 1.5;
 
