--- a/public/css/components/tiles-with-description.css
+++ b/public/css/components/tiles-with-description.css
@@ -43,7 +43,6 @@
     .c-tiles-with-description {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(min(100%, 13em), 1fr));
-        gap: var(--spacing-l-1) var(--spacing-s-4);
         gap: calc(var(--spacing-l-1) + var(--spacing-s-5)) var(--spacing-s-4);
         /* Custom */
         @media (width >= 530px) {
